Enable the teacher to edit the homework\n
Upload files for new homework
Delete uploaded files when editing
Delete tasks when editing
Add tasks when editing

--- a/app/views/shared/_student_homework.html.erb
+++ b/app/views/shared/_student_homework.html.erb
@@ -44,9 +44,9 @@
                 <blockquote>
                   <p>
                     <strong><%= task.item %></strong> <br>
-                    <% if task.url %>
+                    <% if task.url and task.url != "" %>
                       <%= youtubify(task.url) %>
-                    <% elsif task.attachment %>
+                    <% elsif task.attachment.exists? %>
                       <%= youtubify(task.attachment.url) %>
                     <% end %>
                   </p>
