--- a/app/views/teacher/homeworks/new.html.erb
+++ b/app/views/teacher/homeworks/new.html.erb
@@ -38,8 +38,8 @@
         <div class="row">
           <div class="col s10 offset-s1">
             <div class="button-spacing row valign-wrapper">
-              <h5 class="col s5"><strong>Tasks for the homework</strong></h5>
-              <div class="col s7">
+              <h5 class="col left"><strong>Tasks for the homework</strong></h5>
+              <div class="col left">
                 <a onClick="teacher_new_homework_view.AddTask()",
                    class="btn-floating waves-effect waves-light green">
                     <i class="material-icons">add</i>
@@ -47,9 +47,9 @@
               </div>
             </div>
             <div class="button-spacing">
-              <ul id="new-home-work-task-list" class="collection">
+              <ul id="homework-task-list" class="collection">
                 <%= f.fields_for :tasks do |task_form| %>
-                  <li class="valign-wrapper blue-grey darken-3">
+                  <li class="button-spacing valign-wrapper blue-grey darken-3">
                     <div class="col s12">
                       <div class="input-field col s12">
                         <%= task_form.label :description, class: "active" %>
