--- a/app/views/teacher/students/edit.html.erb
+++ b/app/views/teacher/students/edit.html.erb
@@ -28,7 +28,7 @@
   <div class="col s12 white-text card-bottom">
     <%= form_for @student, url: teacher_student_path(@student), class: "card-padding" do |f| %>
       <div class="card-panel hoverable grad">
-        <h5 class="center">Add a student</h5>
+        <h5 class="center">Update this student</h5>
         <div class="input-field">
           <%= f.label "Name:", class: "active" %>
           <%= f.text_field :name %>
