--- a/app/assets/stylesheets/application1.css
+++ b/app/assets/stylesheets/application1.css
@@ -175,3 +175,7 @@ background-image: linear-gradient(-135deg, #181818 0%, #1d1d1d 100%);
 .none {
   display: none;
 }
+
+.wrap-text {
+  word-wrap: break-word;
+}
