--- a/app/assets/stylesheets/application1.css
+++ b/app/assets/stylesheets/application1.css
@@ -175,3 +175,13 @@ background-image: linear-gradient(-135deg, #181818 0%, #1d1d1d 100%);
 .none {
   display: none;
 }
+
+.btn-square {
+  border-radius: 6px !important;
+}
+
+blockquote.comment-block {
+  margin: 20px 0;
+  padding-left: 1.5rem;
+  border-left: 5px solid #03BB4F;
+}
