--- a/app/views/teacher/homeworks/edit.html.erb
+++ b/app/views/teacher/homeworks/edit.html.erb
@@ -66,25 +66,25 @@
                             <%= task_form.label :URL, class: "active" %>
                             <%= task_form.text_field :url, class: "validate" %>
                           </div>
-                          <div class="file-field input-field col s6">
-                            <div class="btn">
+                          <div class="file-field input-field col m6 s12">
+                            <div class="btn brand-bg-lt-grey btn-square">
                               <span>File</span>
                               <%= task_form.file_field :attachment, class: "validate",
                                 onChange: "toggleTaskURLFieldDisabledStatus($(this))" %>
-                          </div>
-                          <div class="file-path-wrapper">
-                            <input class="file-path validate" type="text"
-                                   placeholder="Upload one or more files">
-                          </div>
+                            </div>
+                            <div class="file-path-wrapper">
+                              <input class="file-path validate" type="text"
+                                     placeholder="Upload one or more files">
+                            </div>
                           </div>
                         </div>
                       <% else %>
-                        <div class="input-field col s6">
+                        <div class="input-field col m6 s12">
                           <%= task_form.label :URL, class: "active" %>
                           <%= task_form.text_field :url, class: "validate" %>
                         </div>
-                        <div class="file-field input-field col s6">
-                          <div class="btn">
+                        <div class="file-field input-field col m6 s12">
+                          <div class="btn brand-bg-lt-grey btn-square">
                             <span>File</span>
                             <%= task_form.file_field :attachment, class: "validate",
                               onChange: "toggleTaskURLFieldDisabledStatus($(this))" %>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="center">
-          <%= button_tag "Update!", onClick: "enableURLInputFields()", 
+          <%= button_tag "Update!", onClick: "enableURLInputFields()",
             class: "btn waves-effect waves-light form-button green" %>
         </div>
       <% end %>
