minor Stipe cleanup

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -39,7 +39,7 @@
         </div>
         <div>
           <%= f.label "Plan:" %>
-          <%= f.select :plan, options_for_select([["Basic (1-5 Students): $5/mo", "basic"], ["Standard (6-10 Students): $10/mo", "standard"], ["Premium (11+ Students): $15/mo", "premium"]], "basic") %>
+          <%= f.select :plan, options_for_select([["Basic (1-5 Students): $5/mo", "basic"], ["Standard (6-10 Students): $10/mo", "standard"], ["Premium (11+ Students): $15/mo", "premium"]], current_user.plan) %>
         </div>
         <div class="center button-spacing">
           <%= button_tag "Submit", class: "btn waves-effect waves-light green" do %>
