--- a/app/views/teacher/lessons/edit.html.erb
+++ b/app/views/teacher/lessons/edit.html.erb
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="actions center">
-              <%= button_tag "ADD!", class: "btn waves-effect waves-light form-button green" %>
+              <%= button_tag "UPDATE", class: "btn waves-effect waves-light form-button green" %>
             </div>
           <% end %>
         </div>
