--- a/app/views/teacher/lessons/new.html.erb
+++ b/app/views/teacher/lessons/new.html.erb
@@ -6,7 +6,7 @@
   <% end %>
   <span class="button-text white-text">back to calendar</span>
 </div>
-<div class="row">
+<div class="row button-spacing">
   <div class="col m12 s12 white-text">
     <div class="card-panel hoverable">
       <%= render 'form', lesson: @lesson %>
