fix calendar issue where students could see teachers calendar

--- a/app/views/student/lessons/index.html.erb
+++ b/app/views/student/lessons/index.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Lessons</h1>
-<div class="row">
+<h3 class="center h-3-spacing white-text">
+  Check out your schedule!
+</h3>
+<div class="row button-spacing">
   <div class="col s12 white-text">
     <div class="card-panel hoverable">
       <div class="" id="calendar"></div>
