--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,6 +31,10 @@
           <%= f.text_field :username %>
         </div>
         <div>
+          <%= f.label "Email:" %>
+          <%= f.text_field :email %>
+        </div>
+        <div>
           <%= f.label "Password:" %>
           <%= f.password_field :password %>
         </div>
