--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
 
 <div class="row">
   <div class="col s12 white-text card-bottom">
-    <div class="card-panel hoverable">
+    <div class="card-panel hoverable grad">
       <%= form_for @teacher, url: user_path(current_user.id), class: "card-padding" do |f| %>
         <div>
           <%= f.label "Full Name:" %>
