--- a/app/assets/stylesheets/application1.css
+++ b/app/assets/stylesheets/application1.css
@@ -189,3 +189,7 @@ blockquote.comment-block {
   padding-left: 1.5rem;
   border-left: 5px solid #03BB4F;
 }
+
+.collapsible-header i {
+  margin-right: 0 !important;
+}
