--- a/app/views/teacher/homeworks/new.html.erb
+++ b/app/views/teacher/homeworks/new.html.erb
@@ -14,77 +14,122 @@
     </div>
   </div>
 <% end %>
-
 <h3 class="center button-spacing white-text">
   <span class="thin">New Homework For</span> <%= @student.name %>
 </h3>
+<%= link_to teacher_student_homeworks_path(@student) do %>
+  <%= button_tag class: "btn-floating waves-effect waves-light red" do %>
+    <i class="material-icons">cancel</i>
+  <% end %>
+<% end %>
+<span class="button-text white-text">cancel</span>
 <div class="row button-spacing">
   <div class="col s12 white-text">
-    <div class="card-panel hoverable">
+    <div class="card-panel hoverable grad">
       <%= form_for [:teacher, :student, @homework], multipart: true do |f| %>
-        <div class="row col s10 offset-s1">
-          <h5 class="h-5-spacing">This weeks homework</h5>
-          <div class="input-field button-spacing">
-            <%= f.label "This weeks homework is called: ", class: "active" %>
-            <%= f.text_field :title, class: "validate",
-              placeholder: "E.g. 'week of july 15th: Circle of 5ths'" %>
-          </div>
-          <div class="input-field">
-            <%= f.label "Important notes", class: "active" %>
-            <%= f.text_field :note, class: "validate",
-              placeholder: "This week I want to to spend time understanding..." %>
+      <div class="row">
+        <div class="col s12">
+          <h5 class="">Title</h5>
+          <div class="input-field col s12">
+            <%= f.label " ", class: "active" %>
+            <%= f.text_field :title, value: @homework.title, class: "validate white-text" %>
           </div>
         </div>
-        <div class="row">
-          <div class="col s10 offset-s1">
-            <div class="button-spacing row valign-wrapper">
-              <h5 class="col left"><strong>Tasks for the homework</strong></h5>
-              <div class="col left">
-                <a onClick="teacher_new_homework_view.AddTask()",
-                   class="btn-floating waves-effect waves-light green">
-                    <i class="material-icons">add</i>
-                </a>
-              </div>
-            </div>
-            <div class="button-spacing">
-              <ul id="homework-task-list" class="collection">
-                <%= f.fields_for :tasks do |task_form| %>
-                  <li class="button-spacing valign-wrapper blue-grey darken-3">
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <h5 class="">Notes from lesson</h5>
+          <div class="input-field col s12">
+            <%= f.label " ", class: "active" %>
+            <%= f.text_field :note, value: @homework.note, class: "validate white-text" %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <div class="row">
+            <h5 class="col left">Assignments for this week:</h5>
+          </div>
+          <div class="">
+            <ul id="homework-task-list" class="collection">
+              <%= f.fields_for :tasks do |task_form| %>
+                <li class="collection-item" id="<%= task_form.object.id %>">
+                  <div class="row">
+                    <%= task_form.hidden_field :_destroy %>
+                    <%= task_form.hidden_field :delete_attachment %>
                     <div class="col s12">
+                      <div class="row">
+                        <a onClick="teacher_new_homework_view.RemoveTask(this)">
+                            <i class="material-icons right brand-text-grey">clear</i>
+                        </a>
+                      </div>
                       <div class="input-field col s12">
                         <%= task_form.label :description, class: "active" %>
-                        <%= task_form.text_field :item, class: "validate" %>
+                        <%= task_form.text_field :item, class: "validate white-text" %>
                       </div>
-                      <div class="input-field col s6">
-                        <%= task_form.label :URL, class: "active" %>
-                        <%= task_form.text_field :url, class: "validate" %>
-                      </div>
-                      <div class="file-field input-field col s6">
-                        <div class="btn">
-                          <span>File</span>
-                          <%= task_form.file_field :attachment, class: "validate",
-                            onChange: "toggleTaskURLFieldDisabledStatus($(this))" %>
+                      <% if task_form.object.attachment.exists? %>
+                        <div class="col s12 valign-wrapper">
+                          <a onClick="removeTaskAttachment(this)"
+                             class="">
+                            <i class="material-icons red-text">delete</i>
+                          </a>
+                          <span class="col s12" style="word-wrap: break-word">
+                            <%= task_form.object.attachment_file_name %>
+                          </span>
                         </div>
-                        <div class="file-path-wrapper">
-                          <input class="file-path validate" type="text" placeholder="Upload one or more files">
+                        <div id="edit-homework-new-file" class="hide">
+                          <div class="input-field col m6 s12">
+                            <%= task_form.label :URL, class: "active" %>
+                            <%= task_form.text_field :url, class: "validate white-text" %>
+                          </div>
+                          <div class="file-field input-field col m6 s12">
+                            <div class="btn brand-bg-lt-grey btn-square">
+                              <span>File</span>
+                              <%= task_form.file_field :attachment, class: "validate",
+                                onChange: "toggleTaskURLFieldDisabledStatus($(this))" %>
+                            </div>
+                            <div class="file-path-wrapper">
+                              <input class="file-path validate" type="text"
+                                     placeholder="Upload one or more files">
+                            </div>
+                          </div>
                         </div>
-                      </div>
+                      <% else %>
+                        <div class="input-field col m6 s12">
+                          <%= task_form.label :URL, class: "active" %>
+                          <%= task_form.text_field :url, class: "validate" %>
+                        </div>
+                        <div class="file-field input-field col m6 s12">
+                          <div class="btn brand-bg-lt-grey btn-square">
+                            <span>File</span>
+                            <%= task_form.file_field :attachment, class: "validate",
+                              onChange: "toggleTaskURLFieldDisabledStatus($(this))" %>
+                          </div>
+                          <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text"
+                                   placeholder="Upload one or more files">
+                          </div>
+                        </div>
+                      <% end %>
                     </div>
-                    <div class="col valign">
-                      <a onClick="teacher_new_homework_view.RemoveTask(this)",
-                         class="btn-floating waves-effect waves-light red" >
-                          <i class="material-icons">cancel</i>
-                      </a>
-                    </div>
-                  </li>
-                <% end %>
-              </ul>
-            </div>
+                  </div>
+                </li>
+              <% end %>
+            </ul>
           </div>
         </div>
-        <div class="center">
-          <%= button_tag "Assign!", class: "btn waves-effect waves-light form-button green" %>
+        <div class="col right">
+          <a onClick="teacher_new_homework_view.AddTask()",
+             class="btn-floating waves-effect waves-light green">
+              <i class="material-icons">add</i>
+          </a>
+          <span class="button-text">add more assignments</span>
         </div>
+      </div>
+      <div class="center">
+        <%= button_tag "Assign Homework", onClick: "enableURLInputFields()",
+          class: "btn waves-effect waves-light form-button green" %>
+      </div>
       <% end %>
     </div>
   </div>
