--- a/app/views/teacher/homeworks/index.html.erb
+++ b/app/views/teacher/homeworks/index.html.erb
@@ -14,13 +14,13 @@
   <% @student.homeworks.each do |homework| %>
     <div class="row">
       <div class="col s12 white-text">
-        <div class="card-panel hoverable">
+        <div class="card-panel hoverable grad">
           <% unless homework.tasks.where("complete = ? OR complete IS NULL", false).any? == true %>
             <i class="small material-icons right icon-gold">stars</i>
           <% end %>
           <span class="">
             <blockquote class="">
-              <h5 class="thin"><%= homework.title %></h5>
+              <h5 class="thin"><%= homework.title %><br><span class="small"> -- <%= homework.created_at.strftime("%B %dth, %Y")%><span></h5>
               <p class="thin">
               <%= homework.note %>
               </p>
